<resources>
    <string name="app_name">Jetpack</string>
    <string name="action_settings">Settings</string>
    <string name="add_word">Add word</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="network_request">网络请求封装</string>
    <string name="test_activity">Activity Result API</string>
    <string name="save_state">数据恢复</string>
    <string name="start_timer">开启全局定时器</string>
    <string name="back_with_result">带值返回</string>
    <string name="take_photo">拍照</string>
    <string name="request_permission">请求位置权限</string>
    <string name="request_permission_livedata">请求录音权限livedata</string>
    <string name="stop_timer">停止全局定时器</string>
    <string name="hint_input_name">请输入名字</string>
    <string name="submit">提交</string>
    <string name="login">登录</string>
    <string name="mediator_net">多数据源-网络</string>
    <string name="mediator_db">多数据源-数据库</string>
    <string name="net_request">请求网络</string>
    <string name="net_request_error">请求网络错误</string>
    <string name="net_request_result">网络请求结果</string>
    <string name="zero">0</string>
    <string name="plus_one">+1</string>
    <string name="livedata">LiveData</string>
    <string name="focus_gain_a">FOCUS GAIN A</string>
    <string name="focus_gain_b">FOCUS GAIN TRANSIENT B</string>
    <string name="audio_focus">音频焦点</string>
    <string name="running_thread">running thread</string>
    <string name="kotlin_coroutines">kotlin协程</string>
    <string name="workmanager">WorkManager</string>
    <string name="record_service">录音服务</string>
    <string name="post_twice">连续 postValue 两次</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="compose">Compose</string>
    <string name="add_button">添加</string>
    <string name="delete_all_action">删除</string>
    <string name="list_screen_title">任务列表</string>
    <string name="all_tasks_deleted">所有任务都已清空</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="delete_all_tasks">删除所有任务</string>
    <string name="delete_all_tasks_confirmation">你确定要删除所有任务吗？删除后无法恢复！</string>
</resources>