<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/big_padding">

    <Button
        android:id="@+id/btn_api_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_second_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_api_activity" />

    <Button
        android:id="@+id/btn_save_state_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_second_activity" />

    <Button
        android:id="@+id/btn_start_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_save_state_activity" />

    <Button
        android:id="@+id/btn_livedata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/livedata"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start_timer" />

    <Button
        android:id="@+id/btn_audio_focus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/audio_focus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_livedata" />

    <Button
        android:id="@+id/btn_kotlin_coroutines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kotlin_coroutines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_audio_focus" />

    <Button
        android:id="@+id/btn_workmanager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/workmanager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_kotlin_coroutines" />

    <Button
        android:id="@+id/btn_record_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_workmanager" />
</androidx.constraintlayout.widget.ConstraintLayout>